@@ -35,25 +35,13 @@ class EditAction extends FormlessAction {
 
 	public function show(){
 		$page = $this->page;
-		$request = $this->getRequest();
 		$user = $this->getUser();
-		$context = $this->getContext();
 
 		if ( wfRunHooks( 'CustomEditor', array( $page, $user ) ) ) {
-			if ( ExternalEdit::useExternalEngine( $context, 'edit' )
-				&& $this->getName() == 'edit' && !$request->getVal( 'section' )
-				&& !$request->getVal( 'oldid' ) )
-			{
-				$extedit = new ExternalEdit( $context );
-				$extedit->execute();
-			} else {
-				$editor = new EditPage( $page );
-				$editor->edit();
-			}
+			$editor = new EditPage( $page );
+			$editor->edit();
 		}
-
 	}
-
 }
 
 class SubmitAction extends EditAction {
